# py-tigger

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: benchmark.py  compare_R_vs_Python.ipynb
pytigger/: __init__.py  data.py  evidence.py  genotype.py  novel.py  plotting.py  segments.py  sequences.py  subsample.py
pytigger/data/: SampleGenotype.csv  SampleGermlineIGHV.fasta  SampleNovel.csv
tests/: r_reference_driver.R  test_r_parity.py  test_smoke.py
